changed "Figure" to "fig."; checked diffs

--- a/writing/manuscript.Rmd
+++ b/writing/manuscript.Rmd
@@ -310,7 +310,7 @@ dagify(NDVI ~ S,
 
 ## Strengths and limitations of the simulation-based approach
 
-\noindent Our simulations are based on a simplistic environment with many assumptions that allowed us to estimate how resource abundance and stochasticity affect organisms' home-range sizes if organisms can only respond to changes by adapting the amount of time spent searching for food (with no energetic cost to movement). The use of continuous-time movement models coupled with few drivers of movement supported realistic data that could be explained by straightforward causal models. The absence of confounding variables (e.g., predator avoidance, territoriality, competition, landscape connectivity; see Figure \@ref(fig:dag-sims)) or sample size limitation allowed us to ensure estimates were accurate and robust (sensitivity analysis available in Appendix B).
+\noindent Our simulations are based on a simplistic environment with many assumptions that allowed us to estimate how resource abundance and stochasticity affect organisms' home-range sizes if organisms can only respond to changes by adapting the amount of time spent searching for food (with no energetic cost to movement). The use of continuous-time movement models coupled with few drivers of movement supported realistic data that could be explained by straightforward causal models. The absence of confounding variables (e.g., predator avoidance, territoriality, competition, landscape connectivity; see fig. \@ref(fig:dag-sims)) or sample size limitation allowed us to ensure estimates were accurate and robust (sensitivity analysis available in Appendix B).
 
 Deviations from the simulations offer a means of detecting when the underlying assumptions are inappropriate and how additional factors may affect organisms' responses to changes in $\e(R)$ and $\var(R)$. For example, energetic costs of movement are often non-negligible and depend on organism size [@taylor_energetics_1982], movement speed [@taylor_energetics_1982], and ambient temperature [@brown_toward_2004; @hou_cold_2020]. In addition, an organism may alter its movement behavior, physiology, and energetic needs to buffer itself against changes in $\e(R)$ and $\var(R)$ by using space selectively [@johnson_comparison_1980; @rickbeil_plasticity_2019; @riotte-lambert_environmental_2020; @ranc_memory_2022] and adapting their behavior and physiology over time [@southwood_habitat_1977; @levins_evolution_1974]. Before or during periods of scarcity, organisms may cache resources [@nespolo_why_2022], build up fat reserves [@middleton_green-wave_2018], enter states of dormancy [@goldberg_hibernation_2021; @reher_short_2018; @mohr_cellular_2020], or even pause fetal growth [@schmidt_interplay_2020]. However, organisms may be unable to respond to changes in $\e(R)$ and $\var(R)$ optimally due to various reasons, including limited perceptive range [@steixner-kumar_strategies_2020], lack of experience [@foley_severe_2008; @polansky_elucidating_2015; @falcon-cortes_hierarchical_2021; @merkle_spatial_2019; @fagan_spatial_2013; @abrahms_memory_2019], avoidance of competitors and predators [@kacelnik_ideal_1992; @fretwell_territorial_1969], or a physiology that is not amenable to things like hibernation or fat storage. Thus, organisms may relocate their range to a sub-optimal location [@ciuti_effects_2012; @rich_anthropogenic_2012; @burson_competition_2018; @torrez-herrera_monkeys_2020], which may exacerbate the effects of $\e(R)$ and $\var(R)$ on both mean range size and the variance around it.
 
